# table-chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_ANALYSIS.md  CODEBASE_REVIEW_2025-12-29.md  FEATURE_EXPORT.md  QUICKSTART.md  README.md  TESTING.md  TEST_REPORT.md  TEST_SUMMARY.txt  api-tests.rest  docker-compose.yml  main.py  pyproject.toml  readme_zh.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  agent.py  conversations.py  dbs.py  editor_memory.py  history.py  query.py
backend/app/connectors/: __init__.py  base.py  factory.py  mysql.py  postgres.py
backend/app/database/: editor_memory_db.py
backend/app/db/: sqlite.py
backend/app/models/: agent.py  base.py  conversation.py  database.py  editor_memory.py  error.py  history.py  metadata.py  query.py  ssh.py
backend/app/services/: agent_service.py  agent_tools.py  conversation_service.py  db_manager.py  editor_memory_service.py  history_service.py  llm_service.py  metadata_service.py  query_service.py  ssh_tunnel.py  tokenizer.py
backend/app/utils/: __init__.py  language_detection.py
backend/tests/: __init__.py  api-tests.rest  conftest.py  test_config.py  test_conversation_service.py  test_models.py
backend/tests/test_api/: test_agent.py  test_databases_api.py  test_editor_memory.py  test_history.py  test_natural_query_api.py  test_query_api.py  test_real_postgres.py
backend/tests/test_connectors/: __init__.py  test_mysql_connector.py  test_postgres_connector.py
backend/tests/test_db/: __init__.py  test_sqlite.py
backend/tests/test_services/: __init__.py  test_agent_service.py  test_agent_tools.py  test_db_manager.py  test_editor_memory_service.py  test_history_service.py  test_llm_service.py  test_metadata_service.py  test_query_service.py  test_ssh_tunnel.py
backend/tests/unit/: test_schema_retrieval.py
frontend/: .dockerignore  .prettierignore  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: alias-autocomplete.spec.ts  app.spec.ts  database-management.spec.ts  query-history.spec.ts  resizable-panel.spec.ts  schema-comments.spec.ts  sql-query.spec.ts  (+6 more)
spec/: instructions.md
specs/: bugs.md  instructions.md
(+298 files in other folders)
